[package]
name = "test-server"
version = "0.2.1"
authors = ["Jan David <jandavid@playlunaria.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunaria-api = { path = "../languages/rust", version = "0.2.1", features = ["server"] }

tokio = { version = "1.7.1", features = ["full"] }
tokio-stream = "0.1.7"
tonic = "0.6.0"
