[package]
name = "test-server"
version = "0.0.0"
authors = ["Jan David <jandavid@playlunaria.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunaria-api = { path = "../src/rust", version = "0.0.0", features = ["server"] }

tokio = { version = "0.3.0", features = ["macros", "rt-threaded"] }
tonic = "0.3.1"
